fix: menu on mobile

--- a/src/components/Sidebar/styles/index.css
+++ b/src/components/Sidebar/styles/index.css
@@ -9,22 +9,25 @@
     margin: 0 80px 0 80px;
 }
 
-@media screen and (max-width: 768px) {
-    .sidebar-style {
-        width: 100%;
-    }
-
-    /* .hide-sidebar {
-        left: -500px;
-    }
-
-    .show-sidebar {
-        height: 100%;
-        transition: left 0.7s;
-    } */
+.menu-container {
+    height: 100%;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
+    .sidebar-style {
+        width: 100vw;
+        padding: 0;        /* If parent container used */
+        margin: 0 -1rem 0 -1rem;
+    }
+
+    .menu-container {
+        padding: 0 1rem 0 1rem;
+        height: 100%;
+        transition: transform .9s;
+    }
+}
+
+@media screen and (min-width: 775px) {
     .sidebar-style {
         animation: slideInLeft 0.8s;
     }
