--- a/src/components/Sidebar/styles/menu.css
+++ b/src/components/Sidebar/styles/menu.css
@@ -1,7 +1,11 @@
+.sidebar-dropdown-menu {
+    height: 100%;
+}
+
 @media screen and (max-width: 768px) {
     .sidebar-menu-button {
         cursor: pointer;
-        margin-top: 10px;
+        margin: 10px;
         position: absolute; 
         border: 1px solid white;
         border-radius: 0.3rem;
@@ -21,9 +25,10 @@
     }
 
     .sidebar-dropdown-menu {
-        height: 100vh;
+        height: 100%;
         width: 100vw;
-        margin: 0 -1rem 0 -1rem;
-        background-color: rgba(0,0,0,0.6);
+        margin: 0 -1rem 0 -1rem;  
+        /* If parent container used */
+        background: linear-gradient(to bottom, rgba(0,0,0,0.8),rgba(0,0,0,0.4));
     }
 }
